@@ -52,6 +52,7 @@ struct gretl_option gretl_opts[] = {
     { ADF,      OPT_R, "ctt" },     
     { ADF,      OPT_T, "ct" }, 
     { ADF,      OPT_V, "verbose" },
+    { ADF,      OPT_Q, "quiet" },
     { ARMA,     OPT_N, "native" },
     { ARMA,     OPT_V, "verbose" },
     { ARMA,     OPT_X, "x-12-arima" },
@@ -77,6 +78,7 @@ struct gretl_option gretl_opts[] = {
     { IMPORT,   OPT_O, "box1" },
     { KPSS,     OPT_T, "trend" },
     { KPSS,     OPT_V, "verbose" },
+    { KPSS,     OPT_Q, "quiet" },
     { LEVERAGE, OPT_O, "save" },
     { LMTEST,   OPT_L, "logs" },
     { LMTEST,   OPT_M, "autocorr" },
