@@ -21,6 +21,7 @@ version 1.3.3
   or unequal variances: these were hooked up in reverse
 - corc, hilu and pwe AR(1) commands: make these available in
   loop mode
+- add "quiet" option for the commands adf, kpss and wls
 
 01/28/2005 version 1.3.2
 - Fix bug in auto-determination of lag in ADF test: was looking
